2010-11-10  Glenn Morris  <rgm@gnu.org>

	* eshell/em-unix.el (eshell-remove-entries, eshell/rm)
	(eshell-shuffle-files, eshell-shorthand-tar-command)
	(eshell-mvcpln-template, eshell/mv, eshell/cp, eshell/ln):
	Prefix dynamic locals `interactive', `preview', `recursive', `verbose'.
	* eshell/em-glob.el (eshell-extended-glob, eshell-glob-entries):
	Prefix dynamic local variable `matches'.

2010-11-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* net/browse-url.el (browse-url-mail): Insert body part of mailto url
	in mail buffer; make yank-action always a command that yanks original
	buffer.

2010-11-09  Glenn Morris  <rgm@gnu.org>

	* progmodes/tcl.el (tcl-hairy-scan-for-comment): Doc fix.

2010-11-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (minibuffer-completion-help): Specify the end of the
	completion field (bug#7211).

	* progmodes/python.el (python-font-lock-syntactic-keywords): (bug#7322)
	Fix handling of backslash escapes.
	(python-quote-syntax): Adjust accordingly.

2010-11-09  Richard Levitte  <richard@levitte.org>  (tiny change)

	* vc-mtn.el (vc-mtn-working-revision, vc-mtn-after-dir-status)
	(vc-mtn-workfile-branch): Adjust to new output format.

2010-11-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/mule-cmds.el (princ-list): Mark as obsolete.

2010-11-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/smie.el: New package.

2010-11-09  Michael Albinus  <michael.albinus@gmx.de>

	* files.el (backup-by-copying-when-mismatch):
	Set `permanent-local' property.

	* net/tramp.el (tramp-handle-insert-file-contents): Do not set
	`permanent-local' property for `backup-by-copying-when-mismatch'.

2010-11-09  Eli Zaretskii  <eliz@gnu.org>

	* ls-lisp.el (insert-directory): Doc fix.  (bug#7285)

2010-11-09  Wilson Snyder  <wsnyder@wsnyder.org>

	* progmodes/verilog-mode.el (verilog-insert-one-definition)
	(verilog-read-decls, verilog-read-sub-decls-sig): Fix AUTOWIRE and