@@ -612,11 +612,11 @@ In Eshell's implementation of ls, ENTRIES is always reversed."
 	     (let ((result
 		    (cond
 		     ((eq sort-method 'by-atime)
-		      (eshell-ls-compare-entries l r 4 'eshell-time-less-p))
+		      (eshell-ls-compare-entries l r 4 'time-less-p))
 		     ((eq sort-method 'by-mtime)
-		      (eshell-ls-compare-entries l r 5 'eshell-time-less-p))
+		      (eshell-ls-compare-entries l r 5 'time-less-p))
 		     ((eq sort-method 'by-ctime)
-		      (eshell-ls-compare-entries l r 6 'eshell-time-less-p))
+		      (eshell-ls-compare-entries l r 6 'time-less-p))
 		     ((eq sort-method 'by-size)
 		      (eshell-ls-compare-entries l r 7 '<))
 		     ((eq sort-method 'by-extension)
@@ -941,5 +941,4 @@ to use, and each member of which is the width of that column
 ;; generated-autoload-file: "esh-groups.el"
 ;; End:
 
-;; arch-tag: 9295181c-0cb2-499c-999b-89f5359842cb
 ;;; em-ls.el ends here
